# heraldecho

./: .gitattributes  .gitignore  Dockerfile  config.json  docker-compose.yml  pyproject.toml  requirements.txt  spawn_env.sh
app/: app.py  db-init.sql  wait_for_db.py
db/migrations/: V1__initialize.sql
db/scripts/: migrate.sh
deploy/: heraldecho.service
heraldecho/: constants.py  main.py  models.py
scripts/: spawn_env.sh  start.py  start_server.sh
